[tool.poetry]
name = "kalina"
version = "0.1.0"
description = ""
authors = ["James Chuong <chuong.james@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.13"
alembic = "^1.4.1"
fastapi = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
